# compact-thrift

./: .gitignore  Cargo.toml  README.md
generator/: Makefile  generate-parquet.sh  pom.xml
generator/src/main/antlr4/net/jhorstmann/compactthrift/: Thrift.g4
generator/src/main/java/net/jhorstmann/compactthrift/: Generator.kt  Main.kt  Visitor.kt
parquet/: Cargo.toml  README.md
parquet/benches/: filemetadata.rs
parquet/examples/: dump.rs
parquet/src/: encodings.rs  format.rs  lib.rs
runtime/: Cargo.toml  README.md
runtime/benches/: numbers.rs
runtime/src/: error.rs  lib.rs  macros.rs  protocol.rs  types.rs  uleb.rs
src/main/java/net/jhorstmann/compactthrift/: Domain.kt  Generator.kt  Main.kt  Parser.kt  Visitor.kt
src/main/rust/: Cargo.toml
src/main/rust/parquet/: Cargo.toml
src/main/rust/parquet/benches/: filemetadata.rs
src/main/rust/parquet/examples/: dump.rs
src/main/rust/parquet/src/: format.rs  lib.rs
src/main/rust/runtime/: Cargo.toml
src/main/rust/runtime/benches/: numbers.rs
src/main/rust/runtime/src/: error.rs  lib.rs  macros.rs  protocol.rs  types.rs  uleb.rs
src/main/rust/src/: lib.rs
src/main/rust/tests/: parquet.rs
src/test/resources/: parquet.thrift
