[package]
name = "compact-thrift-runtime"
version = "0.2.0"
license = "Apache-2.0"
description = "Runtime library for compact-thrift code generator"
homepage = "https://github.com/jhorstmann/compact-thrift"
repository = "https://github.com/jhorstmann/compact-thrift"
authors = ["Jörn Horstmann <git@jhorstmann.net>"]
keywords = ["thrift", "parquet"]
readme = "README.md"
edition = "2021"
rust-version = "1.76.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "numbers"
harness = false
